--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -20,7 +20,10 @@ jobs:
         pip install pytz
     - name: Copy results from issue
       run: |
-        python scripts/process-issue.py ${{ github.event.issue.title }}  ${{ github.event.issue.body }}
+        python scripts/process-issue.py
+      env:
+        title: ${{ github.event.issue.title }}
+        body: ${{ github.event.issue.body }}
     - name: Update results
       run: |
         python scripts/process-scores.py
