--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,6 +1,7 @@
 name: Update data
 
 on:
+  workflow_dispatch:
   issues:
     types: opened
 
@@ -19,6 +20,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install pytz
     - name: Copy results from issue
+      if: ${{ github.event_name == 'issues' }}
       run: |
         python scripts/process-issue.py
       env:
